--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
+    "config-yml": "^0.10.3",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "nuxt-i18n": "^6.15.4"
@@ -28,6 +29,7 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "fs-extra": "^9.0.1",
     "netlify-cms-proxy-server": "^1.3.7",
     "prettier": "^2.1.2",
     "stylelint": "^13.7.2",
